# UMTK

./: CMakeLists.txt  Contributing.md  Create-User.ps1  README.md  ReadMe.md  Readme.txt  UMTK.ps1  domainwidget.cpp  domainwidget.h  initalwidget.cpp  initalwidget.h  localwidget.cpp  localwidget.h  mainwidget.cpp  mainwidget.cpp.autosave  mainwidget.h  mainwindow.cpp  mainwindow.h  serverwidget.cpp  serverwidget.h
.github/workflows/: cmake.yml  codeql-analysis.yml  codeql.yml
C++ UMTK/: CMakeLists.txt  README  domainwidget.cpp  domainwidget.h  localwidget.h  mainwidget.cpp  mainwindow.cpp  mainwindow.h  newuser.cpp  newuser.h  psintegration.cpp  psintegration.h  templateuser.cpp  templateuser.h
C++ UMTK/Deploy/: ReadMe
C++ UMTK/Deploy/Classic/: umtk-classic.nsi
C++ UMTK/Deploy/Classic V 1.0/: umtk-classic.nsi
C++ UMTK/Deploy/QML V 1.0/: umtk-qml.nsi
C++ UMTK/QT UMTK/: CMakeLists.txt  UMTK.db  configurationwidget.cpp  configurationwidget.h  create_clients_db.sql  disablewidget.cpp  domainwidget.cpp  domainwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  newuser.cpp  psintegration.cpp  psintegration.h
C++ UMTK/SRC/: CMakeLists.txt  disablewidget.cpp  domainwidget.cpp  domainwidget.h  editwidget.cpp  editwidget.h  localwidget.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  newuser.cpp  newuser.h  psintegration.cpp  psintegration.h
C++ UMTK/UMTK QML/: AdvancedSettingsWidget.qml  CMakeLists.txt  DisableAccountWidget.qml  DomainAccountWidget.qml  Icon.qrc  Images.qrc  LocalAccountWidget.qml  advancedsettings.cpp  advancedsettings.h  configurationwidget.cpp  create_clients_db.sql  disablewidget.h  domainintegration.cpp  domainintegration.h  editwidget.cpp  editwidget.h  main.cpp  main.qml  mainwidget.h  mainwindow.h  newuser.h  psintegration.cpp  psintegration.h
Classic V 1.0/: umtk-classic.nsi
Powershell Script version/: Create-User.ps1  SNUC Docmentation.docx
Scripts/: Automate.ps1
Sys/: Cloud Clients.txt  Cloud Prefixes.txt  Standardized New User Creations.docx
UMTK PowerShell GUI/: ReadMe.md  UMTK.ps1
